@@ -12,6 +12,12 @@ What's New in Python 2.6 alpha 2?
 Core and builtins
 -----------------
  
+- Issue #1477: With narrow Unicode builds, the unicode escape sequence
+  \Uxxxxxxxx did not accept values outside the Basic Multilingual Plane.  This
+  affected raw unicode literals and the 'raw-unicode-escape' codec.  Now
+  UTF-16 surrogates are generated in this case, like normal unicode literals
+  and the 'unicode-escape' codec.
+
 - Issue #2348: add Py3k warning for file.softspace.
 
 - Issue #2346/#2347: add Py3k warnings for __methods__ and __members__.
